objects/Customer_Portal_Ping_User__c.object
<CustomObject>
    <description>Stores data from ping and relates to residential account</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Portal Ping Users</relationshipLabel>
        <relationshipName>Customer_Portal_Ping_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Portal Ping Users</relationshipLabel>
        <relationshipName>Customer_Portal_Ping_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ping_User_ID__c</fullName>
        <externalId>true</externalId>
        <label>Ping User ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Residential_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Residential Project</label>
        <referenceTo>Residential_Project__c</referenceTo>
        <relationshipLabel>Customer Portal Ping Users</relationshipLabel>
        <relationshipName>Customer_Portal_Ping_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Customer Portal Ping User</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Portal Ping User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Portal Ping Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>